--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.11.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.5.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
