--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "^18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
-    "react-lazy-load-image-component": "^1.5.6"
+    "react-lazy-load-image-component": "^1.5.6",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.7.10"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
