--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "bootstrap-icons": "^1.10.5",
     "file-saver": "^2.0.5",
+    "gh-pages": "^5.0.0",
     "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.11.0",
@@ -29,5 +32,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "vite": "^4.3.2"
-  }
+  },
+  "homepage": "https://chiatung1010.github.io/customized-room/"
 }
