--- a/package.json
+++ b/package.json
@@ -14,20 +14,21 @@
   "dependencies": {
     "bootstrap-icons": "^1.10.5",
     "file-saver": "^2.0.5",
-    "gh-pages": "^5.0.0",
+    "gh-pages": "^3.0.0",
     "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-lazy-load-image-component": "^1.5.6",
     "sweetalert": "^2.1.2",
-    "sweetalert2": "^11.7.10"
+    "sweetalert2": "^11.4.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "^8.38.0",
+    "eslint": "^8.44.0",
+    "eslint-config-standard-react": "^13.0.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
